# napari-plugin-checks

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  napari_plugin_checks.py  napari_plugin_precommit.py  setup.cfg  tox.ini
.github/workflows/: ci.yml
tests/: test_a.py  test_checks.py
tests/bad_examples/: imports_pyqt5.py  imports_pyside2.py  requirements.txt  setup.cfg
tests/good_examples/: boring.py
