[metadata]
name = napari-plugin-precommit
version = 0.1.0
description = basic checks for napari plugins
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tlambert03/napari-plugin-precommit
author = Talley Lambert
author_email = talley.lambert@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
py_modules = napari_plugin_precommit
python_requires = >=3.6

[options.entry_points]
console_scripts =
    napari-plugin-precommit=napari_plugin_precommit:main

[options.extras_require]
tests =
    covdefaults
    coverage
    pytest

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
