[metadata]
name = napari_plugin_checks
version = 0.3.0
description = basic checks for napari plugins
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tlambert03/napari-plugin-checks
author = Talley Lambert
author_email = talley.lambert@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
py_modules = napari_plugin_checks
install_requires =
    grimp==1.3.0
python_requires = >=3.6

[options.entry_points]
console_scripts =
    napari-plugin-check=napari_plugin_checks:main

[options.extras_require]
tests =
    pytest
    pytest-cov

[bdist_wheel]
universal = True

[coverage:report]
exclude_lines =
    pragma: no cover
    if __name__ == .__main__.:

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false

[flake8]
exclude = docs,_version.py,.eggs,examples
max-line-length = 88
docstring-convention = numpy
ignore = D100, D213, D401, D413, D107, W503

[isort]
profile = black
src_paths = {{cookiecutter.project_slug}}
